@@ -102,7 +102,7 @@
         <checkstyle.puppycrawl.version>8.45</checkstyle.puppycrawl.version>
         <mockito.version>3.12.4</mockito.version>
         <mysql.connector.version>8.0.30</mysql.connector.version>
-        <postgres.connector.version>42.6.0</postgres.connector.version>
+        <postgres.connector.version>42.7.3</postgres.connector.version>
         <slf4j.version>1.7.33</slf4j.version>
         <snappy.version>1.1.10.4</snappy.version>
         <spring.version>5.2.25.RELEASE</spring.version>
@@ -933,6 +933,8 @@
                                 <arg>java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED</arg>
                                 <arg>--add-exports</arg>
                                 <arg>jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</arg>
+                                <arg>--add-exports</arg>
+                                <arg>java.base/sun.net.util=ALL-UNNAMED</arg>
                             </compilerArgs>
                         </configuration>
                     </plugin>
